# pmx

./: .gitignore  README.md  TODO.md  meson.build
include/: processing.h
include/config/: config.h  prefix.h
include/console/: check_command.h  colors.h  commands.h  describe_command.h  list_command.h  messages.h  meta_command.h  params_command.h  pmx_command.h  send_command.h  start_command.h  status_command.h
include/error/: error.h
include/filter_chain_control/: filter_chain_control.h
include/grpc/: GrpcService.h
include/interpolation/: interpolation.h
include/logging/: logger.h
include/metadata/: metadata_watcher.h
include/midi/router/: midi_router.h
include/osc/: parse_osc_path.h
include/parameters/: parameters.h
include/pmx/: constants.h
include/proxy/: proxy_watcher.h
include/pwcpp/: filter_app.h  filter_app_builder.h  node_registry.h
include/sdcpp/: bus.h  error.h  units.h
include/slp_ctrl/: GroupChannelSooperLoopers.h  SooperLooper.h  group_channel_sooper_loopers.h  launch_pad_mini.h  launchpad_colors.h  session.h
include/tools/: filter_parameter_tools.h  pipewire_tools.h
include/ump/: control_change.h  create_ump_message.h  note.h  sysex.h
include/utils/: synchronized_queue.h
include/wpcpp/: error.h  link_collection.h  metadata.h  metadata_collection.h  port.h  port_collection.h  proxy_collection.h  proxy_collection_builder.h
scripts/: meson.build  pmx-disable-filter-chains.fish  pmx-enable-filter-chains.fish  pmx-register-sooper-looper-updates.fish  pmx-start-sooperlooper.fish.in
sooperlooper/: meson.build  pmx-session.slsess  sooperlooper_setup.fish
src/: colors.cpp  config.cpp  constants.cpp  filter_app.cpp  filter_app_builder.cpp  filter_chain_ctrl_main.cpp  group_channel_sooper_loopers.cpp  interpolation.cpp  launchpad_colors.cpp  link_collection.cpp  meson.build  metadata.cpp  metadata_collection.cpp  metadata_watcher.cpp  midi_router_main.cpp  parameters.cpp  parse_osc_path.cpp  pipewire_tools.cpp  port_collection.cpp  prefix.cpp  processing.cpp  proxy_collection.cpp  proxy_watcher.cpp  session.cpp  units.cpp
src/applications/: console.cpp  ctrl_pipe.cpp  filter_chain_ctrl.cpp  grpc_api.cpp  lp_mini_init.cpp  metadata_manager.cpp  midi_router.cpp  osc_network_receiver.cpp  osc_network_router.cpp  osc_network_sender.cpp  params_watcher.cpp  slp_ctrl.cpp  traktor_z1_router.cpp
src/commands/: check.cpp  describe.cpp  list.cpp  meta.cpp  pmx.cpp  send.cpp  setup.cpp  start.cpp  status.cpp  watch.cpp
systemd/: meson.build  performance-mixer.target  pmx-filter-chain-ctrl.service.in  pmx-filter-chains.service.in  pmx-grpc-api.service.in  pmx-jack-midi-clock.service  pmx-lp-mini-init.service.in  pmx-metadata-manager.service.in  pmx-midi-router.service.in  pmx-osc-network-receiver.service.in  pmx-osc-network-sender.service.in  pmx-osc-sl-network-receiver.service.in  pmx-osc-sl-network-sender.service.in  pmx-slp-ctrl.service.in  pmx-sooperlooper.service.in  pmx-traktor-z1-router.service.in
test/: meson.build  test_interpolation.cpp  test_osc_path_parsing.cpp
test/integration/: setup_container.fish  startup.sh  update_lua_scripts.fish  update_lua_scripts_and_config.fish
test/integration/assertions/: assert_all_filter_chains_loaded.lua  assert_groups_connected_to_layer.lua  assert_inputs_connected_to_groups_initial_config.lua
test/integration/debug_tools/: pmx-debug-tmux.fish
test/integration/pipewire/: null_sinks.conf
test/unit/: meson.build  test_interpolation.cpp  test_osc_path_parsing.cpp
wireplumber/: _test.lua  connect_faderfox.lua  connect_group_mixers_to_layer_mixer.lua  connect_input_mixers_to_group_mixers.lua  create_input_channel_filter_chain.lua  debug_log_level.conf  handle_metadata_changes.lua  meson.build  pmx.conf  pmx_connect_controllers.lua  pmx_connect_group_to_layer.lua  pmx_connect_launchpad_mini_init.lua  pmx_connect_launchpad_mini_sooperlooper.lua  pmx_connect_osc_ports.lua  pmx_control_watcher.lua  pmx_filter_builder.lua  pmx_filter_manager.lua  pmx_filter_watcher.lua  pmx_link_manager.lua  pmx_manage_connections.lua  pmx_metadata.lua  pmx_metadata_watcher.lua  pmx_midi_routing_matrix.lua  pmx_port_watcher.lua  pmx_set_up_filter_chain.lua  pmx_utils.lua  set_pmx_group.lua  t.lua  test.lua  tmp.lua
wireplumber/lib/: pmx_filter_builder.lua
