install_data(
    'connect_faderfox.lua',
    'connect_group_mixers_to_layer_mixer.lua',
    'connect_input_mixers_to_group_mixers.lua',
    'handle_capture_ports.lua',
    'handle_filters.lua',
    'handle_metadata_changes.lua',
    'handle_playback_ports.lua',
    install_dir : 'share/wireplumber/scripts/pmx')

install_data(
    'lib/pmx_filter_builder.lua',
    install_dir : 'share/wireplumber/scripts/pmx/lib')