install_data(
    'pmx_control_watcher.lua',
    'pmx_filter_builder.lua',
    'pmx_filter_manager.lua',
    'pmx_filter_watcher.lua',
    'pmx_link_manager.lua',
    'pmx_metadata.lua',
    'pmx_metadata_watcher.lua',
    'pmx_port_watcher.lua',
    'pmx_utils.lua',
    install_dir : 'share/wireplumber/scripts/pmx')

install_data(
    'pmx.conf',
    install_dir : 'share/wireplumber/wireplumber.conf.d')