install_data(
    'pmx_connect_osc_ports.lua',
    'pmx_connect_group_to_layer.lua',
    'pmx_control_watcher.lua',
    'pmx_filter_manager.lua',
    'pmx_set_up_filter_chain.lua',
    'pmx_connect_controllers.lua',
    'pmx_midi_routing_matrix.lua',
    'pmx_manage_connections.lua',
    install_dir : 'share/wireplumber/scripts/pmx')

install_data(
    'pmx_utils.lua',
    'pmx_filter_builder.lua',
    install_dir : 'share/lua/5.4')

install_data(
    'pmx.conf',
    install_dir : 'share/wireplumber/wireplumber.conf.d')